[tool.poetry]
name = "python-dsa"
version = "0.1.0"
description = "Python Data Structures and Algorithms"
authors = ["Onesmus Wambugu <onesmus1024@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
